[package]
name = "calendar"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
# colored = "3.0.0" # Removed as it's not used with ncurses and causes build issues
clap = { version = "4.5", features = ["derive"] }
pancurses = "0.17.0"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
