[package]
name = "calendar"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "3.0.0"
clap = { version = "4.5", features = ["derive"] }
ncurses = "5.101.0"
tokio = { version = "1.28.0", features = ["full"] }
tokio-postgres = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rustbox = "0.11.0"
