[package]
name = "calendar"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
colored = "3.0.0"
clap = { version = "4.5", features = ["derive"] }
ncurses = "5.101.0"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rustbox = "0.11.0"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
directories = "5.0.1"
futures = "0.3.31"
oauth2 = "4.4.2"
reqwest = { version = "0.12.19", features = ["json"] }
tokio-util = "0.7.15"
url = "2.5.4"
webbrowser = "1.0.4"
dirs = "6.0.0"
